--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="Images/GitHub-logo.png">
         </a>
         <a href="https://www.instagram.com/xtyrell_h_/" target="_blank">
-        <img src="Images/instagram-logo.jpg">
+        <img src="Images/insta_logo.png">
         </a>
          <a href="https://www.youtube.com/channel/UCGuTzq9Mwsrhzsc92sugcVw" target="_blank">
         <img src="Images/youtube-logo.jpg">
